--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,30 +1,31 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:15
-    container_name: comments_db
-    env_file:
-      - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    restart: always
+    environment:
+      POSTGRES_DB: yourdbname
+      POSTGRES_USER: youruser
+      POSTGRES_PASSWORD: yourpassword
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   web:
-    build:
-      context: D:\Projects\Dzen TT\backend
-    container_name: comments_web
+    build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-    - ./backend:/backend
-
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
-    env_file:
-      - .env
+    environment:
+      - DB_NAME=yourdbname
+      - DB_USER=youruser
+      - DB_PASSWORD=yourpassword
+      - DB_HOST=db  # ← це головне!
+      - DB_PORT=5432
 
 volumes:
   postgres_data:
