--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,31 +1,53 @@
 services:
   db:
-    image: postgres:15
+    image: postgres:16
     restart: always
     environment:
-      POSTGRES_DB: yourdbname
-      POSTGRES_USER: youruser
-      POSTGRES_PASSWORD: yourpassword
+      POSTGRES_DB: comments
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  redis:
+    image: redis:7-alpine
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
 
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - .:/app
+      - .:/backend
     ports:
       - "8000:8000"
     depends_on:
       - db
+      - redis
     environment:
-      - DB_NAME=yourdbname
-      - DB_USER=youruser
-      - DB_PASSWORD=yourpassword
-      - DB_HOST=db  # ← це головне!
-      - DB_PORT=5432
+      - DEBUG=True
+      - POSTGRES_DB=comments
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - REDIS_URL=redis://redis:6379/0
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
