--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -23,10 +23,7 @@ services:
 
   web:
     build: .
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             python manage.py runserver 0.0.0.0:8000"
+    command: ["/wait-for-db.sh", "python", "manage.py", "runserver", "0.0.0.0:8000"]
     volumes:
       - .:/backend
     ports:
