--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,8 +38,8 @@ django-debug-toolbar==4.4.6
 requests==2.32.3
 
 # WebSocket support
-channels==4.1.0
-channels-redis==4.2.0
+channels
+channels_redis
 
 # Task queue (for file processing)
 celery==5.3.4
@@ -49,4 +49,5 @@ celery[redis]==5.3.4
 opencv-python-headless==4.10.0.84
 
 djangorestframework-simplejwt==5.2.2
-# Optional: For handling large files   
+# Optional: For handling large files
+daphne
