--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,4 +18,4 @@ COPY wait-for-db.sh /wait-for-db.sh
 RUN chmod +x /wait-for-db.sh
 
 # Команда запуску
-CMD ["/wait-for-db.sh", "python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["/wait-for-db.sh", "daphne", "-b", "0.0.0.0", "-p", "8000", "config.asgi:application"]
