chore: update .gitignore to include comments.pem

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -241,5 +241,4 @@ __pycache__/
 !**/migrations/__init__.py   # якщо хочеш залишати порожні пакети міграцій
 
 # Тимчасові резервні файли редакторів
-*~
-Dzen TT/comments.pem
+comments.pem
