--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -41,6 +41,19 @@ services:
     networks:
       - app-network
 
+  frontend:
+    build:
+      context: ../frontend
+    command: npm run dev -- --host 0.0.0.0
+    working_dir: /app
+    volumes:
+      - ../frontend:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
 
