--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,8 +38,9 @@ django-debug-toolbar==4.4.6
 requests==2.32.3
 
 # WebSocket support
-channels
-channels_redis
+channels==4.1.0
+channels_redis==4.2.0
+
 
 # Task queue (for file processing)
 celery==5.3.4
@@ -50,4 +51,4 @@ opencv-python-headless==4.10.0.84
 
 djangorestframework-simplejwt==5.2.2
 # Optional: For handling large files
-daphne
+daphne==4.1.2
